2010-03-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryTemplateParameterDataProvider.cs:
	  Fixed 'Bug 588366 - Intellisense broken for nested generic
	  types'.

2010-03-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs:
	* MonoDevelop.CSharp.Completion/MemberCompletionData.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryTemplateParameterDataProvider.cs:
	  Fixed 'Bug 588220 - No intellisense for generic methods.'.

2010-03-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs:
	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs:
	* MonoDevelop.CSharp.Refactoring/FindMemberAstVisitor.cs:
	* MonoDevelop.CSharp.Resolver/NewCSharpExpressionFinder.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Highlighting/HighlightCSharpSemanticRule.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryParameterDataProvider.cs:
	  Track API changes.

2010-03-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/FindMemberAstVisitor.cs:
	  Fixed 'Bug 587530 – for/foreach rename refactoring ignores
	  the scope'.

2010-03-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/CSharpParser.cs: Handled generated
	  blocks/fixed some unit tests.

2010-03-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/CSharpParser.cs:
	* MonoDevelop.CSharp.Dom/Statements/ForStatement.cs:
	* MonoDevelop.CSharp.Dom/Statements/LockStatement.cs:
	* MonoDevelop.CSharp.Dom/Statements/YieldStatement.cs:
	* MonoDevelop.CSharp.Dom/Statements/FixedStatement.cs:
	* MonoDevelop.CSharp.Dom/Statements/UsingStatement.cs:
	* MonoDevelop.CSharp.Dom/Statements/WhileStatement.cs:
	* MonoDevelop.CSharp.Dom/Statements/EmptyStatement.cs:
	* MonoDevelop.CSharp.Dom/Statements/CheckedStatement.cs: